tests/macros/editor/choices.stderr
error: option `choices` does not exist for kind `editor`
 --> $DIR/choices.rs:2:38
  |
2 |     inquisition::questions![Editor { choices: todo!() }];
  |                                      ^^^^^^^
