tests/macros/editor/choices.rs
fn main() {
    inquisition::questions![Editor { choices: todo!() }];
}
